--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #  BASIC SITE INFO
 # --------------------------------------------------
 title: Yadong Jiang   # Main site title (appears in browser tab & RSS)
-tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.  # Optional short tagline, used by some layouts
+tagline: Here is personal website of Yadong Jiang. Powered by Jekyll.  # Optional short tagline, used by some layouts
 description: Two roads diverged in woods, I took the one less traveled by.  # Strongly recommended for SEO & social cards
 
 # TIP ── For local development you can comment out `url`
@@ -14,7 +14,7 @@ url: https://yadongj.github.io/
 # --------------------------------------------------
 owner:
   name: Yadong Jiang
-  avatar: images.jpg
+  avatar: cats.jpg
   # bio: Dream big, stay positive, work hard, and enjoy the journey.
   email: edunyadong@gmail.com
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
