--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: https://yadongj.github.io/
 # --------------------------------------------------
 owner:
   name: Yadong Jiang
-  avatar: cats.jpg
+  avatar: cat.jpg
   # bio: Dream big, stay positive, work hard, and enjoy the journey.
   email: edunyadong@gmail.com
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
