--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ links:
   #   url: /hobbies/
   # - title: Blogs
   #   url: /blogs/
-  # - title: 中文
-  #   url: /cn/
+  - title: 中文
+    url: /cn/
 
 
 # --------------------------------------------------
